--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -13,27 +13,31 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v2
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: "14"
+    - name: Set up Node.js 20
+      uses: actions/setup-node@v2
+      with:
+        node-version: '20'
 
-      - name: Install dependencies
-        run: npm install
+    - name: Install dependencies
+      run: npm install
 
-      - name: Build project
-        run: npm run build
+    - name: Run build
+      run: npm run build
 
-      - name: Install sshpass
-        run: sudo apt-get install -y sshpass
+    # Testlarni o‘tkazib yuborish
+    - name: Run tests (skipped)
+      run: npm test || true
 
-      - name: Deploy to server
-        env:
-          SERVER: ${{ secrets.SERVER }}
-          USER: ${{ secrets.USER }}
-          PASSWORD: ${{ secrets.PASSWORD }}
-        run: |
-          sshpass -p "$PASSWORD" ssh -o StrictHostKeyChecking=no $USER@$SERVER "pm2 stop all && cd /path/to/your/project && git pull && npm install && npm run build && pm2 start ecosystem.config.js"
+    - name: Install sshpass
+      run: sudo apt-get install -y sshpass
+
+    - name: Deploy to server
+      env:
+        SERVER: ${{ secrets.SERVER }}
+        USER: ${{ secrets.USER }}
+        PASSWORD: ${{ secrets.PASSWORD }}
+      run: |
+        sshpass -p "$PASSWORD" ssh -o StrictHostKeyChecking=no $USER@$SERVER "pm2 stop all && cd /path/to/your/project && git pull && npm install && npm run build && pm2 start ecosystem.config.js"
