--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -13,31 +13,31 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Set up Node.js 18
-      uses: actions/setup-node@v2
-      with:
-        node-version: '18'
+      - name: Set up Node.js 18
+        uses: actions/setup-node@v2
+        with:
+          node-version: "18"
 
-    - name: Install dependencies
-      run: npm install
+      - name: Install dependencies
+        run: npm install
 
-    - name: Run build
-      run: npm run build
+      - name: Run build
+        run: npm run build
 
-    # Testlarni o‘tkazib yuborish
-    - name: Run tests (skipped)
-      run: npm test || true
+      # Testlarni o‘tkazib yuborish
+      - name: Run tests (skipped)
+        run: npm test || true
 
-    - name: Install sshpass
-      run: sudo apt-get install -y sshpass
+      - name: Install sshpass
+        run: sudo apt-get install -y sshpass
 
-    - name: Deploy to server
-      env:
-        SERVER: ${{ secrets.SERVER }}
-        USER: ${{ secrets.USER }}
-        PASSWORD: ${{ secrets.PASSWORD }}
-      run: |
-        sshpass -p "$PASSWORD" ssh -o StrictHostKeyChecking=no $USER@$SERVER "pm2 stop Abdurashid && cd first-real-project && git pull && npm install && npm run build && pm2 start dist/main.js --name Abdurashid"
+      - name: Deploy to server
+        env:
+          SERVER: ${{ secrets.SERVER }}
+          USER: ${{ secrets.USER }}
+          PASSWORD: ${{ secrets.PASSWORD }}
+        run: |
+          sshpass -p "$PASSWORD" ssh -o StrictHostKeyChecking=no $USER@$SERVER "pm2 stop Abdurashid && cd first-real-project && git pull && npm install && npm run build && pm2 start dist/main.js --name Abdurashid"
